# fastapi-nginx-auth-backend

./: Dockerfile  README.md  docker-compose.yml  healthcheck.py  pyproject.toml
app/: main.py
app/auth/: api.py  schemas.py  util.py
app/conf/: log_filter.py  settings.py
app/startup/: __init__.py  app.py  events.py  middlewares.py
frontend/nginx/: nginx.conf
frontend/web/: index.html  login.html
